--- a/index.html
+++ b/index.html
@@ -900,7 +900,7 @@
               <a href="#">
 
                 <figure class="blog-banner-box">
-                  <img src="./assets/images/setup.jpg" alt="Design conferences in 2022" loading="lazy">
+                  <img src="./assets/images/room.jpg" alt="Design conferences in 2022" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
